--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @import url(asig2.css);
 @import url(asig3.css);
-/*@import url(clouds.css);*/
+@import url(clouds.css);
 @import url(cards.css);
 @import url(select.css);
 @import url(gradient.css);
